# rust_test_01

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  readme.md
src/: functions.rs  main.rs  models.rs  tests.rs
static/: index.html
tests/: common.rs  integration_test.rs  requests.http
tests/data/: generated.json  request.json
