[package]
name = "rustrestapitest"
version = "0.0.0"
#publish = false
authors = ["riros <ivanvalenkov@gmail.com>"]
edition = "2018"

[dependencies]
#serde-xml-rs = "0.3.1"
#serde_derive = "1.0.91"
#serde = "1.0.91"
#[profile.release]
#overflow-checks = true
#actix = "0.8.1"


# неудачный выбор.
# Не может работать с потоками и загружать из памяти.
# Очень медленно загружает из файла.
# TODO заменить библиотеку
raster = "0.2"


# как делать graceful shutdown?
rocket = "0.4"
rocket_contrib = "0.4"


multipart = "0.16"
#http = "0.1"

# TODO проверить, завершаются ли дочерние потоки при отправке SIGTERM
rayon = "1.*"
reqwest = "0.9"
mime = "0.3"
#mime_guess="2.0.0-alpha.6"

file_diff = "1.0"

url = "1.7.*"

serde = "1"
serde_json = "1"
serde_derive = "1"

base64 = "0.10"

graceful = "0.1"

tempfile = "3.0"
rand = "0.6"

comrak="0.6"

sysinfo = "0.8"
num-traits = "0.2"
